fix visibility

--- a/article.css
+++ b/article.css
@@ -154,6 +154,10 @@ p {
 	background: rgb(114, 3, 3);
 }
 
+#vote-container {
+	display: none;
+}
+
 .enabled-vote-pane {
 	background: white;
 	padding: 8px;
@@ -161,6 +165,7 @@ p {
 	left: 20px;
 	width: calc(300px + 20vw);
 	margin: 30px 0;
+	display: block;
 }
 
 .button-group {
